--- a/Interaktiv receptionist/Template/Hjemmesidetemplate/Hjemmesidetemplate/Pages/Index.cshtml
+++ b/Interaktiv receptionist/Template/Hjemmesidetemplate/Hjemmesidetemplate/Pages/Index.cshtml
@@ -39,7 +39,7 @@
 
 <body>
 <h1 style="position: fixed; left: 34%; top: 3%; font-family: oswald; font-size: 420%; color: #8D9092;">Hvad vil du gerne finde?</h1>
-<img id="hus" src="billeder/venstre.png" alt="image error";>
+<img id="hus" src="https://i.imgur.com/7xZqyQ1.png" style="width: 50px; height: 50px; margin: 13% 0% 0% -35%;" alt="image error";>
 <hr style="position: fixed; border-top: 5px solid #F3BB1B; padding: 50%; left: 0%; top: 18%;" />
 <div class="Sidebox" style="position: fixed; top: 20%; padding: 14px;">
     <p class="Sidetext">
