--- a/Interaktiv receptionist/Template/Hjemmesidetemplate/Hjemmesidetemplate/Pages/Index.cshtml
+++ b/Interaktiv receptionist/Template/Hjemmesidetemplate/Hjemmesidetemplate/Pages/Index.cshtml
@@ -34,25 +34,51 @@
             top: 50%;
             transform: translateY(-50%);
         }
+        .search_box {
+            font-family: oswald;
+            border-style: solid;
+            border-radius: 10px;
+            background-color: #666D77;
+            border-color: #666D77;
+            float: right;
+            margin: 11% 1% 0% -70%;
+            width: 100%;
+            height: 5%;
+            color: white;
+        }
+        .søgeknap{
+            border-style: none;
+            background: none;
+            outline: none;
+            color: white;
+            width: 100%;
+            margin: 0% 0% 0% 2%;
+        }
+        
     </style>
 </head>
 
 <body>
-<h1 style="position: fixed; left: 34%; top: 3%; font-family: oswald; font-size: 420%; color: #8D9092;">Hvad vil du gerne finde?</h1>
-<img id="hus" src="https://i.imgur.com/7xZqyQ1.png" style="width: 50px; height: 50px; margin: 13% 0% 0% -35%;" alt="image error";>
+<h1 style="position: fixed; left: 45%; top: 1%; font-family: oswald; font-size: 420%; color: #8D9092;">Hvad vil du gerne finde?</h1>
+<img src="https://i.imgur.com/7xZqyQ1.png" style="width: 70px; height: 70px; margin: 9% 0% 0% -33%;" alt="image error";>
+<img src="https://i.imgur.com/qTQ0t0I.png" style="width: 70px; height: 70px; margin: 9% 0% 1% 2%"/>
+<img src="https://i.imgur.com/JJ1ZkjE.png" style="width: 70px; height: 70px; margin: 9% 0% 1% 2%"/>
+<div class="search_box">
+    <input type="text" placeholder="Search.." class="søgeknap">
+</div>
 <hr style="position: fixed; border-top: 5px solid #F3BB1B; padding: 50%; left: 0%; top: 18%;" />
-<div class="Sidebox" style="position: fixed; top: 20%; padding: 14px;">
+<div class="Sidebox" style="position: fixed; top: 22%; padding: 14px;">
     <p class="Sidetext">
         Søg efter <br /> virksomhed
     </p>
 </div>
-<div class="Sidebox" style="position: fixed; top: 33%; padding: 16px;">
+<div class="Sidebox" style="position: fixed; top: 35%; padding: 16px;">
     <p class="Sidetext">
         Søg efter <br /> lokale
     </p>
 </div>
     
-<div class="Sidebox" style="position: fixed; top: 46%; padding: 30px; ">
+<div class="Sidebox" style="position: fixed; top: 48%; padding: 30px; ">
     <p class="Sidetext">
         FAQ
     </p>
