--- a/Interaktiv receptionist/Template/Hjemmesidetemplate/Hjemmesidetemplate/Pages/Index.cshtml
+++ b/Interaktiv receptionist/Template/Hjemmesidetemplate/Hjemmesidetemplate/Pages/Index.cshtml
@@ -60,9 +60,9 @@
 
 <body>
 <h1 style="position: fixed; left: 45%; top: 1%; font-family: oswald; font-size: 420%; color: #8D9092;">Hvad vil du gerne finde?</h1>
-<img src="https://i.imgur.com/7xZqyQ1.png" style="width: 70px; height: 70px; margin: 9% 0% 0% -33%;" alt="image error";>
-<img src="https://i.imgur.com/qTQ0t0I.png" style="width: 70px; height: 70px; margin: 9% 0% 1% 2%"/>
-<img src="https://i.imgur.com/JJ1ZkjE.png" style="width: 70px; height: 70px; margin: 9% 0% 1% 2%"/>
+<img src="\Pictures/hus.png" style="width: 70px; height: 70px; margin: 9% 0% 0% -33%;" alt="image error";>
+<img src="\Pictures/venstre.png.png" style="width: 70px; height: 70px; margin: 9% 0% 1% 2%"/>
+<img src="\Pictures/højre.png.png" style="width: 70px; height: 70px; margin: 9% 0% 1% 2%"/>
 <div class="search_box">
     <input type="text" placeholder="Search.." class="søgeknap">
 </div>
