--- a/Interaktiv receptionist/Template v_2/Template/Hjemmesidetemplate/Hjemmesidetemplate/Pages/Index.cshtml
+++ b/Interaktiv receptionist/Template v_2/Template/Hjemmesidetemplate/Hjemmesidetemplate/Pages/Index.cshtml
@@ -26,7 +26,7 @@
                 box-shadow: 7px 7px 5px grey;
                 font-family: oswald;
                 font-size: 100%;
-                padding: 3vh;
+                padding: 3vh;                
             }
 
             .SideboxFirma {
@@ -39,7 +39,6 @@
                 font-size: 100%;
                 padding: 3vh;
             }
-
 
             .Sidetext {
                 font-family: oswald;
@@ -66,6 +65,9 @@
                 width: 100%;
                 margin: 0% 0% 0% 2%;
             }
+            
+}
+
         </style>
 
         <meta charset="utf-8">
@@ -74,19 +76,21 @@
 
 <body>
     <div class="container h-100">
-        <h1 class="col-8 offset-2" style="font-family: oswald; font-size: 420%; color: #8D9092;">Hvad vil du gerne finde?</h1>
+        <div>
+            <h1 class="col-8 offset-3" style="; font-family: oswald; font-size: 380%; color: #8D9092;">Hvad vil du gerne finde?</h1>
+        </div>
 
-        <div class="col-8 offset-2 mb-2 search_box">
+        <div class="col-8 offset-3 mb-2 search_box">
             <input type="text" placeholder="Search.." class="søgeknap">
         </div>
 
-        <hr class="col-12" style="border-top: 5px solid #F3BB1B;" />
+        <hr class="col-xs-12 mb-4" style="border-top: 5px solid #F3BB1B;" />
 
         <div class="row align-items-center h-100">
             <div class="col-2 mb-5 Sidebox">
-                <p class="my-auto text-center">Søg Efter Virksomhed</p>
+                <p class="my-auto text-center">Søg Efter <br /> Virksomhed</p>
             </div>
-            <div class="col-2 mb-5 offset-2 SideboxFirma">
+            <div class="col-2 mb-5 offset-1 SideboxFirma">
                 <p class="my-auto text-center" style="text-align:center;">Firma 1</p>
             </div>
             <div class="col-2 mb-5 offset-1 SideboxFirma">
@@ -104,9 +108,9 @@
 
         <div class="row align-items-center h-100">
             <div class="col-2 mb-5 Sidebox">
-                <p class="my-auto text-center">Søg Efter lokale</p>
+                <p class="my-auto text-center">Søg Efter <br /> lokale</p>
             </div>
-            <div class="col-2 mb-5 offset-2 Sidebox">
+            <div class="col-2 mb-5 offset-1 Sidebox">
                 <p class="my-auto text-center" style="text-align:center;">
                     Firma 4
                 </p>
@@ -119,6 +123,47 @@
             <div class="col-2 mb-5 offset-1 Sidebox">
                 <p class="my-auto text-center" style="text-align:center;">
                     Firma 6
+                </p>
+            </div>
+
+        </div>
+
+        <div class="row align-items-center h-100">
+            <div class="col-2 mb-5 Sidebox">
+                <p class="my-auto text-center">Ofte stillede <br />spørgsmål</p>
+            </div>
+            <div class="col-2 mb-5 offset-1 Sidebox">
+                <p class="my-auto text-center" style="text-align:center;">
+                    Firma 7
+                </p>
+            </div>
+            <div class="col-2 mb-5 offset-1 Sidebox">
+                <p class="my-auto text-center" style="text-align:center;">
+                    Firma 8
+                </p>
+            </div>
+            <div class="col-2 mb-5 offset-1 Sidebox">
+                <p class="my-auto text-center" style="text-align:center;">
+                    Firma 9
+                </p>
+            </div>
+
+        </div>
+
+        <div class="row align-items-center h-100">
+            <div class="col-2 mb-5 offset-3 Sidebox">
+                <p class="my-auto text-center" style="text-align:center;">
+                    Firma 10
+                </p>
+            </div>
+            <div class="col-2 mb-5 offset-1 Sidebox">
+                <p class="my-auto text-center" style="text-align:center;">
+                    Firma 11
+                </p>
+            </div>
+            <div class="col-2 mb-5 offset-1 Sidebox">
+                <p class="my-auto text-center" style="text-align:center;">
+                    Firma 12
                 </p>
             </div>
 
@@ -142,19 +187,6 @@
         </p>
     </div>
     -->
-    </div>
-    <div class="container">
-        <<button class="btn btn-primary">
-            <span class="spinner-border spinner-border-sm"></span>
-        </button>
-
-
-        <button type="button" class="btn btn-primary btn-lg">Large</button>
-        <button type="button" class="btn btn-primary">Firma 3</button>
-        <button type="button" class="btn btn-primary">Firma 3</button>
-        <button type="button" class="btn btn-primary">Firma 3</button>
-
-
     </div>
 </body>
 
