--- a/Interaktiv receptionist/Template v_2/Template/Hjemmesidetemplate/Hjemmesidetemplate/Pages/Index.cshtml
+++ b/Interaktiv receptionist/Template v_2/Template/Hjemmesidetemplate/Hjemmesidetemplate/Pages/Index.cshtml
@@ -9,7 +9,10 @@
         <title>Velkommen til</title>
         <style>
 
-
+            ::placeholder { /* Firefox, Chrome, Opera */
+                color: white;
+                
+            }
             * {
                 box-sizing: border-box;
             }
@@ -26,7 +29,8 @@
                 box-shadow: 7px 7px 5px grey;
                 font-family: oswald;
                 font-size: 100%;
-                padding: 3vh;                
+                padding: 3vh;    
+                height: 10vh;
             }
 
             .SideboxFirma {
@@ -50,11 +54,11 @@
                 font-family: oswald;
                 border-style: solid;
                 border-radius: 10px;
-                background-color: #666D77;
-                border-color: #666D77;
+                background-color: #8D9092;
+                border-color: #8D9092;
                 width: 100%;
                 height: 5%;
-                color: white;
+                color: white;                
             }
 
             .søgeknap {
@@ -65,8 +69,11 @@
                 width: 100%;
                 margin: 0% 0% 0% 2%;
             }
+            button:hover {
+                color: white;
+                background-color: hotpink;
+            }
             
-}
 
         </style>
 
@@ -75,40 +82,53 @@
     </head>
 
 <body>
-    <div class="container h-100">
+    <div class="container-fluid h-100">
         <div>
-            <h1 class="col-8 offset-3" style="; font-family: oswald; font-size: 380%; color: #8D9092;">Hvad vil du gerne finde?</h1>
+            <h1 class="col-8 offset-3" style="font-family: oswald; font-size: 380%; color: #8D9092;">Hvad vil du gerne finde?</h1>
         </div>
 
-        <div class="col-8 offset-3 mb-2 search_box">
-            <input type="text" placeholder="Search.." class="søgeknap">
+        <div class="row">
+            <div class="col-1 align-self-start">
+                <img src="\Pictures/hus.png" style="width: 50px; height: 50px; margin: 9% 0% 0% 40%;" alt="image error";>
+            </div>
+            <div class="col-1 align-self-center">
+                <img src="\Pictures/venstre.png.png" onclick="javascript:history.go(-1)" style="width: 50px; height: 50px; margin: 9% 0% 1% 2%" />
+            </div>
+            <div class="col-1 align-self-center center">
+                <img src="\Pictures/højre.png.png" onclick="javascript:history.go(+1)" style="width: 50px; height: 50px; margin: 9% 0% 1% -45%"/>
+            </div>
+            <div class="col-8 mb-2 search_box align-self-center mt-2">
+                <input type="text" placeholder="Søg efter virksomheder eller lokaler.." class="søgeknap">
+            </div>
         </div>
 
-        <hr class="col-xs-12 mb-4" style="border-top: 5px solid #F3BB1B;" />
+        <div class="row">
+            <hr class="col-11 mb-4" style="border-top: 5px solid #F3BB1B; margin: 2% 0% 0% -1.2%;" />
+        </div>
 
         <div class="row align-items-center h-100">
-            <div class="col-2 mb-5 Sidebox">
-                <p class="my-auto text-center">Søg Efter <br /> Virksomhed</p>
-            </div>
-            <div class="col-2 mb-5 offset-1 SideboxFirma">
+            <a href="www.Google.dk" class="col-2 mb-5 Sidebox text-center" role="button">I'm FREE</a>
+            <!--<button type="button" class="col-2 mb-5 Sidebox">-
+            <p class="my-auto text-center">Søg efter <br /> virksomhed</p>
+            </button>-->
+            <button type="button" class="col-2 mb-5 offset-1 SideboxFirma">
                 <p class="my-auto text-center" style="text-align:center;">Firma 1</p>
-            </div>
-            <div class="col-2 mb-5 offset-1 SideboxFirma">
+            </button>
+            <button type="button" class="col-2 mb-5 offset-1 SideboxFirma">
                 <p class="my-auto text-center" style="text-align:center;">
                     Firma 2
                 </p>
-            </div>
-            <div class="col-2 mb-5 offset-1 SideboxFirma">
+            </button>
+            <button type="button" class="col-2 mb-5 offset-1 SideboxFirma">
                 <p class="my-auto text-center" style="text-align:center;">
                     Firma 3
                 </p>
-            </div>
-
+            </button>
         </div>
 
         <div class="row align-items-center h-100">
             <div class="col-2 mb-5 Sidebox">
-                <p class="my-auto text-center">Søg Efter <br /> lokale</p>
+                <p class="my-auto text-center">Søg efter <br /> lokale</p>
             </div>
             <div class="col-2 mb-5 offset-1 Sidebox">
                 <p class="my-auto text-center" style="text-align:center;">
@@ -187,7 +207,7 @@
         </p>
     </div>
     -->
-    </div>
+        </div>
 </body>
 
 
