--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Oversigt.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Oversigt.cshtml
@@ -41,7 +41,7 @@
         </div>
 
         <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href='/privacy'">Oversigtskort</button>
+            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href='/faq'">Oversigtskort</button>
             
             <button type="button" class="col-2 mb-5 offset-1 SideboxFirma">
                 <p class="my-auto text-center">Firma 1</p>
@@ -70,7 +70,7 @@
         </div>
 
         <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href='/privacy'">Ofte Stillede Spørgsmål</button>
+            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href='/faq'">Ofte Stillede Spørgsmål</button>
 
             <button type="button" class="col-2 mb-5 offset-1 SideboxFirma">
                 <p class="my-auto text-center">Firma 7</p>
