--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/wwwroot/css/core.css
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/wwwroot/css/core.css
@@ -1,7 +1,7 @@
 ﻿::placeholder { /* Firefox, Chrome, Opera */
     color: white;
-                
 }
+
 * {
     box-sizing: border-box;
 }
@@ -13,19 +13,19 @@ body {
 .Sidebox {
     background-color: #F3BB1B;
     color: white;
-    display: block;                
+    display: block;
     border-radius: 20%;
     box-shadow: 7px 7px 5px grey;
     font-family: oswald;
     font-size: 100%;
-    padding: 3vh;    
+    padding: 3vh;
     height: 10vh;
 }
 
 .SideboxFirma {
     background-color: grey;
     color: white;
-    display: block;                
+    display: block;
     border-radius: 20%;
     box-shadow: 7px 7px 5px grey;
     font-family: oswald;
@@ -37,7 +37,7 @@ body {
 .Sidetext {
     font-family: oswald;
     font-size: 100%;
-    text-align:center;                
+    text-align: center;
 }
 
 .search_box {
@@ -48,8 +48,7 @@ body {
     border-color: #8D9092;
     width: 100%;
     height: 5%;
-    color: white;  
-                
+    color: white;
 }
 
 .søgeknap {
@@ -60,12 +59,13 @@ body {
     width: 100%;
     margin: 0% 0% 0% 2%;
 }
+
 button:hover {
     color: white;
     background-color: hotpink;
 }
 
-.headline{
+.headline {
     font-family: oswald;
     font-size: 380%;
     color: #8d9092;
@@ -78,17 +78,62 @@ button:hover {
 }
 
 .backbutton {
-    width: 50px; 
-    height: 50px; 
+    width: 50px;
+    height: 50px;
     margin: 9% 0% 1% 2%
 }
 
 .forwardbutton {
-    width: 50px; 
-    height: 50px; 
+    width: 50px;
+    height: 50px;
     margin: 9% 0% 1% -45%
 }
 
 .orangeline {
-    border-top: 5px solid #F3BB1B; margin: 2% 0% 0% -1.2%;
+    border-top: 5px solid #F3BB1B;
+    margin: 2% 0% 0% -1.2%;
+}
+
+.col1 {
+    width: 90%;
+    height: 100%;
+    border: solid 4px;
+    border-bottom: none;
+    border-color: #f3bb1b;
+}
+
+.col2 {
+    width: 90%;
+    height: 100%;
+    border: solid 4px;
+    border-top: none;
+    border-bottom: none;
+    border-color: #f3bb1b;
+}
+
+.col3 {
+    width: 90%;
+    height: 100%;
+    border: solid 4px;
+    border-top: none;
+    border-bottom: none;
+    border-color: #f3bb1b;
+}
+
+.col4 {
+    width: 90%;
+    height: 400%;
+    border: solid 4px;
+    border-top: none;
+    border-color: #f3bb1b;
+}
+
+.faqspørgsmål {
+    margin-left: 5%;
+    font-family: oswald;
+    font-size: 17px;
+}
+
+.faqsvar {
+    margin-left: 5%
 }
