--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Firmainfo.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Firmainfo.cshtml
@@ -45,16 +45,36 @@
         </div>
 
         <!-- This div contains the buttons on left hand side-->
-        <div class="row align-items-center h-100">
+        <div class="row">
             <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href = '/privacy'">Oversigtskort</button>
+            <div class="col-9 offset-1">
+                <div class="col1">
+                    <!-- fix style -->
+                    <img src="Pictures/bell.png" class="homeicon rounded float-right" style="margin-right: 10%"/>
+                </div>
+            </div>
         </div>
 
-        <div class="row align-items-center h-100">
+        <div class="row">
             <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href = '/privacy'">Parkering</button>
+            <div class="col-9 offset-1">
+                <div class="col2"></div>
+            </div>
         </div>
 
-        <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href = '/privacy'">Ofte Stillede Spørgsmål</button>
+        <div class="row">
+            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href = '/privacy'">Ofte stillede spørgsmål</button>
+            <div class="col-9 offset-1">
+                <div class="col3">
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-2 mb-5 "></div>
+            <div class="col-9 offset-1">
+                <div class="col4"></div>
+            </div>
         </div>
     </div>
 </body>
