--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Parkering.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Parkering.cshtml
@@ -39,21 +39,46 @@
         </div>
 
         <!-- This div contains the orange through and through line-->
+        <!-- This div contains the orange through and through line-->
         <div class="row">
             <hr class="col-11 mb-4 orangeline" />
         </div>
 
         <!-- This div contains the buttons on left hand side-->
-        <div class="row align-items-center h-100">
+        <div class="row">
             <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href = '/privacy'">Oversigtskort</button>
+            <div class="col-9 offset-1">
+                <div class="col1">
+                    <p class="Parkering_skrift">Hvis du ønsker at parkere hos Novi 8, så indtast venligst din nummerplade, for at begynde:</p>
+                </div>
+            </div>
         </div>
 
-        <div class="row align-items-center h-100">
+        <div class="row">
             <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href = '/privacy'">Parkering</button>
+            <div class="col-9 offset-1">
+                <div class="col2">
+                    <div class="col-8 mb-2 align-self-center">
+                        <input type="text" placeholder="XN XX XXX" class="Parkerings_input">
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href = '/privacy'">Ofte Stillede Spørgsmål</button>
+        <div class="row">
+            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href = '/privacy'">Ofte stillede spørgsmål</button>
+            <div class="col-9 offset-1">
+                <div class="col3">
+                    <button type="button" class="col-4 mb-5 offset-4 text-center parkerings_knap " onclick="window.location.href = '/privacy'">Registrer</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-2 mb-5 "></div>
+            <div class="col-9 offset-1">
+                <div class="col4"></div>
+            </div>
         </div>
     </div>
 </body>
