--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Oversigtskort.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Oversigtskort.cshtml
@@ -6,7 +6,7 @@
 
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="\css/core.css" />
+    <link rel="stylesheet" href="\css/core.css"/>
 
     <title>Oversigtskort</title>
 
@@ -42,19 +42,7 @@
         <div class="row">
             <hr class="col-11 mb-4 orangeline" />
         </div>
-
-        <!-- This div contains the buttons on left hand side-->
-        <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href = '/privacy'">Oversigtskort</button>
-        </div>
-
-        <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href = '/privacy'">Parkering</button>
-        </div>
-
-        <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href = '/privacy'">Ofte Stillede Spørgsmål</button>
-        </div>
+        <img src="Pictures/novi.png" width="80%" height="50%">
     </div>
 </body>
 
