--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Personinfo.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Personinfo.cshtml
@@ -43,17 +43,43 @@
         </div>
 
         <!-- This div contains the buttons on left hand side-->
-        <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href = '/privacy'">Oversigtskort</button>
-        </div>
+        <div class="row">
+            <button type="button" class="col-2 mb-5 Sidebox text-center" onclick="window.location.href = '/privacy'">Oversigtskort</button>
 
-        <div class="row align-items-center h-100">
+            <div class="col-5 offset-1">
+                <p class="normaltext">
+                    Navn: Jen Jenssen<br />
+                    Lokale: 0.1.95<br />
+                    tlf: 99887766
+                </p>
+            </div>
+            <div class="col">
+                <img src="\Pictures/novi.png" width="75%" height="100%">
+            </div>
+        </div>
+        <div class="row">
             <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href = '/privacy'">Parkering</button>
         </div>
 
-        <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href = '/privacy'">Ofte Stillede Spørgsmål</button>
+        <div class="row align-items align-self-start-center h-100">
+            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href = '/privacy'">FAQ</button>
+
+            <!--This div contains info on how to find the person-->
+            <div class="col-8 offset-1 personboxfind">
+
+                <div class="col-7 offset-1 normaltext mb-5">
+                    <p class="normaltext">Sådan finder du Jens Jensen</p>
+                    <br />
+                    1. Gå til venstre ved kantinen <br />
+                    2. Følg trappen op til anden sal
+                </div>
+                <div class="row mb-5 justify-content-center">
+                    <img class="personboxnavn" src="\Pictures/novi.png" width="675vh" height="130vh">
+                </div>
+
+            </div>
         </div>
     </div>
 </body>
+
 
