--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Index.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Index.cshtml
@@ -30,9 +30,9 @@
         <p class="headline">
             Mangler du hjælp til noget?
         </p>
-    </div>
+    </div><br/><br/>
     <div class="row align-items-center h-100">
-        <button type="button" class="col-4 offset-4 startknap mb-5" onclick="window.location.href='/personinfo'">Tryk her</button>
+        <button type="button" class="col-4 offset-4 startknap mb-5" onclick="window.location.href='/oversigt'">Tryk her</button>
     </div>
 </div>
 </body>
