--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Oversigt.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Oversigt.cshtml
@@ -23,7 +23,7 @@
 
         <div class="row">
             <div class="col-1 align-self-start">
-                <img src="\Pictures/hus.png"  class="homeicon";>
+                <img src="\Pictures/hus.png"  class="homeicon" onclick="window.location.href='/oversigt'";>
             </div>
             <div class="col-1 align-self-center">
                 <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="backbutton" />
@@ -32,7 +32,7 @@
                 <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="forwardbutton"/>
             </div>
             <div class="col-8 mb-2 search_box align-self-center mt-2">
-                <input type="text" placeholder="Søg efter virksomheder eller lokaler.." class="søgeknap">
+                <input type="text" placeholder="Søg efter virksomheder, medarbejdere eller lokaler.." class="søgeknap">
             </div>
         </div>
 
@@ -41,7 +41,7 @@
         </div>
 
         <div class="row align-items-center h-100">
-            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href='/faq'">Oversigtskort</button>
+            <button type="button" class="col-2 mb-5 Sidebox text-center" onclick="window.location.href='/oversigtskort'">Oversigtskort</button>
             
             <button type="button" class="col-2 mb-5 offset-1 SideboxFirma">
                 <p class="my-auto text-center">Firma 1</p>
