--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Parkering.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Parkering.cshtml
@@ -25,7 +25,7 @@
         <!-- This div contains the icons and search field-->
         <div class="row">
             <div class="col-1 align-self-start">
-                <img src="\Pictures/hus.png" class="homeicon" ;>
+                <img src="\Pictures/hus.png" class="homeicon" onclick="window.location.href='/oversigt'" ;>
             </div>
             <div class="col-1 align-self-center">
                 <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="backbutton" />
