--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Firmainfo.cshtml
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/Pages/Firmainfo.cshtml
@@ -3,22 +3,23 @@
 @{
     ViewData["Title"] = "Person information";
 }
-<head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="\css/core.css" />
+    <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="\css/core.css" />
+        <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
-    <title>@ViewData["title"]</title>
+        <title>@ViewData["title"]</title>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-</head>
+    </head>
 
 <body>
     <!-- This div contains the site-->
     <div class="container-fluid h-100">
         <div>
-            <h1 class="col-8 offset-3 headline">@ViewData["Title"]</h1>
+            <h1 class="col-8 offset-3 headline novifont">@ViewData["Title"]</h1>
         </div>
 
         <!-- This div contains the icons and search field-->
@@ -33,7 +34,7 @@
                 <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="forwardbutton" />
             </div>
             <div class="col-8 mb-2 search_box align-self-center mt-2">
-                <input type="text" placeholder="Søg efter virksomheder eller lokaler.." class="søgeknap">
+                <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont">
             </div>
         </div>
 
@@ -44,35 +45,35 @@
 
         <!-- This div contains the buttons on left hand side-->
         <div class="row">
-            <button type="button" class="col-2 mb-5 Sidebox text-center" onclick="window.location.href = '/privacy'">Oversigtskort</button>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href = '/privacy'">Oversigtskort</button>
 
             <div class="col-5 offset-1">
-                <p class="normaltext">
+                <p class="normaltext novifont">
                     Lokale: Kantine<br />
                     Nummer: 0.0.1<br />
                 </p>
             </div>
-            <div class="col">
-                <img src="\Pictures/novi.png" width="75%" height="100%">
+            <div class="col logo1">
+                <img src="\Pictures/novi.png" width="60%" height="50%">
             </div>
         </div>
         <div class="row">
-            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href = '/privacy'">Parkering</button>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href = '/privacy'">Parkering</button>
         </div>
         <div class="row align-items align-self-start-center h-100">
-            <button type="button" class="col-2 mb-5 Sidebox text-center " onclick="window.location.href = '/privacy'">FAQ</button>
+            <button type="button" class="col-2 mb-5 sidebox text-center novifont" onclick="window.location.href = '/privacy'">FAQ</button>
 
             <!--This div contains info on how to find the person-->
-            <div class="col-8 offset-1 personboxfind">
+            <div class="col-8 offset-1 personfindbox">
 
-                <div class="col-7 offset-1 normaltext mb-5">
+                <div class="col-7 offset-1 normaltext mb-5 novifont">
                     <p style="font-size: 140%; color: grey;">Sådan finder du Kantinen</p>
                     <br />
                     1. Fortsæt ligeud <br />
                     2. Kantinen vil være lige fremme
                 </div>
                 <div class="row mb-5 justify-content-center">
-                    <img class="personboxnavn" src="\Pictures/novi.png" width="675vh" height="130vh">
+                    <img class="personboxnavn" src="\Pictures/novi.png" width="20%" height="30%">
                 </div>
 
             </div>
