--- a/Interaktiv receptionist/Template Final/Hjemmesidetemplate/wwwroot/css/core.css
+++ b/Interaktiv receptionist/Template Final/Hjemmesidetemplate/wwwroot/css/core.css
@@ -12,20 +12,20 @@ body {
 }
 
 .novifont {
-    font-family: arial;
+    font-family: Oswald;
 }
 
 
 
-.Sidebox {
+.sidebox {
     background-color: #F3BB1B;
     color: white;
     display: block;
-    border-radius: 20%;
+    border-radius: 15%;
     box-shadow: 7px 7px 5px grey;
     font-size: 100%;
     padding: 3vh;
-    height: 10vh;
+    height: 95px;
 }
 
 .SideboxFirma {
@@ -54,18 +54,19 @@ body {
     color: white;
 }
 
-.søgeknap {
+.searchbar {
     border-style: none;
     background: none;
     outline: none;
     color: white;
     width: 100%;
-    margin: 0% 0% 0% 2%;
+    margin: 0% 0% 0% 0.5%;
+    
 }
 
 button:hover {
     color: white;
-    background-color: hotpink;
+    background-color: grey;
 }
 
 .headline {
@@ -93,7 +94,7 @@ button:hover {
 
 .orangeline {
     border-top: 5px solid #F3BB1B;
-    margin: 2% 0% 0% -1.2%;
+    margin: 1% 0% 0% 0%;
 }
 
 .col1 {
@@ -130,8 +131,9 @@ button:hover {
     border-color: #f3bb1b;
 }
 
-.faqspørgsmål {
-    margin-left: 5%;
+.faqquestions {
+    margin-top: 1%;
+    margin-left: 3%;
     font-size: 17px;
 }
 
@@ -203,10 +205,11 @@ button:hover {
     border-color: orange;
 }
 
-.personboxfind {
+.personfindbox {
     border-color: orange;
     display: block;
     border-style: solid;
+    margin-top: -150px;
 }
 
 .normaltext {
@@ -217,4 +220,9 @@ button:hover {
 .hovedtext {
     font-size: 400%;
     color: grey;
+}
+
+.logo1 {
+    margin-top: 30px;
+    padding-left: 150px;
 }
